@@ -338,3 +338,11 @@ class BuiltinTest(UnitTest):
             
         self.assertEqual(res, range(1,5))
 
+    def testSorted(self):
+        lst1 = range(10)
+        lst2 = range(10)
+        lst2.reverse()
+        self.assertTrue(lst1 == sorted(lst2), "lst1 == sorted(lst2)")
+
+        self.assertTrue(lst1 == sorted(xrange(10)), "lst1 == sorted(xrange(1))")
+        self.assertTrue(lst2 == sorted(xrange(10), reverse=True), "lst2 == sorted(xrange(10), reverse=True)")
